kubernetes/kubernetes-in-action/05_Services_enabling_clients_to_discover_and_talk_to_pods/kubia-pod-port-naming.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
spec:
  containers:
    - name: kubia
      image: hyooo/kubia
      ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
