kubernetes/kubernetes-in-action/05_Services_enabling_clients_to_discover_and_talk_to_pods/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort # 서비스 타입을 노드 포트로 설정
  ports:
    - port: 80 # 서비스 내부 클러스터 IP 의 포트
      targetPort: 8080 # 서비스 대상 파드의 포트
      nodePort: 30123 # 각 클러스터 노드의 포트 30123으로 서비스에 액세스 가능
  selector:
    app: kubia
