kubernetes/kubernetes-in-action/05_Services_enabling_clients_to_discover_and_talk_to_pods/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
    - port: 80 # 서비스가 사용할 포트
      targetPort: 8080 # 서비스가 포워드할 컨테이너 포트
  selector:
    app: kubia
