kubernetes/kubernetes-in-action/05_Services_enabling_clients_to_discover_and_talk_to_pods/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - host: kubia.example.com # 도메인 명을 서비스에 매핑
      http:
        paths:
        - path: /
          backend:
            service:
              name: kubia-nodeport
              port:
                number: 80
          pathType: Prefix
